<resources>
    <string name="app_name">ReviewApp</string>
    <string name="dialogTitle">Are you sure you want to delete your account permanently?</string>
    <string name="decline">No</string>
    <string name="accept">Yes</string>
    <string name="location_switch">enable gps to continue</string>
    <string name="search_title">search for a restaurant</string>
    <string name="title_activity_reviews">ReviewsActivity</string>
    <string name="email_empty">Please enter email</string>
    <string name="password_empty">Please enter password</string>
    <string name="incorrect_credentials">Email or Password is incorrect</string>
    <string name="verify_email">Please verify your email first</string>
    <string name="name_empty">Please enter name</string>
    <string name="password_validation">Password must be more than 6 characters</string>
    <string name="email_validation">Email is not valid</string>
    <string name="email_verification_sent">Verification email has been sent</string>
    <string name="email_verification_not_sent">Verification email could not been sent</string>
    <string name="singed_out">signed out successfully</string>
    <string name="account_deleted">Account deleted</string>
    <string name="image_not_seleted">image not selected</string>
    <string name="image_uploaded">Image uploaded successfully</string>
    <string name="no_updates">nothing new to update</string>
    <string name="check_email">Check your email to reset password!</string>
    <string name="select_image">please select image</string>
    <string name="wait">Please wait until image is loaded</string>
    <string name="welcome_login">Welcome! Login to your account</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="reset_password_btn">Reset Password</string>
    <string name="login_btn">Login</string>
    <string name="favorites_title">Favorite Restaurants</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="welcome_signup">Welcome! Sign up for an account</string>
    <string name="name_hint">Name</string>
    <string name="signup_btn">sign up</string>
    <string name="alredy_have_account">Already have an account?</string>
    <string name="no_results">could not find results at your location</string>
    <string name="update_btn">Update profile photo</string>
    <string name="sign_out_btn">sign out</string>
    <string name="delete_account_btn">Delete account</string>
</resources>